--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <title>ALURAFLIX</title>
+<head>
+
+<body>
+    <section>
+        <div>
+             <header>ALURAFLIX</header>
+             <h1>Zootopia</h1>
+        </div>
+        <div>
+            <p>Esse filme é legal</p>
+            <iframe width="500" height="315" src="https://youtu.be/x_2E6nlnMPU?si=u6r4hDweFh9POM5G"
+            title="Youtube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscop; picture-in-picture"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+</body>
+
+</html>
